Notes/Intro to Python/Python 2 (Loops & Reg. Expression)
More Python Loops, Arrays, & Functions
#useful to walk through your data and perform logic
#testing operators

a < b - test if something is less than
a > b - test if something is greater than
a >=b - test if something is greater than or equal
a > b and b > b - combine logic using AND
a > b or b > c - combine using OR
not(a < b) - negate the result with NOT

LOGIC SOME MORE
>>> a=1
>>> b=2
>>> if a !=b:
...     print("a not b")
... else:
...     print("a==b")
... 
a not b
>>> if not (a !=b):
...     print("a not b")
... else:
...     print("a==b")
... 
a==b

FOR LOOPS
#reminder of how to use for to iterate through items in a list or a string

 dna="AAGATCAGGAC"
>>> for c in dna:
...     print("DNA base is" + c)
... 
DNA base isA
DNA base isA
DNA base isG
DNA base isA
DNA base isT
DNA base isC
DNA base isA
DNA base isG
DNA base isG
DNA base isA
DNA base isC

>>> for c in range(len(dna)):
...     print("DNA base is" + dna[c])
... 
DNA base isA
DNA base isA
DNA base isG
DNA base isA
DNA base isT
DNA base isC
DNA base isA
DNA base isG
DNA base isG
DNA base isA
DNA base isC

>>> for n in lst:
...     print("items is", n)
... 
items is 70
items is 78
items is 12

LOOPS WITH WHILE
#another way to loop is to use the while operator
>>> i=0
>>> while i < 10:
...     print("i is", i)
... 
i is 0
i is 0
i is 0
i is 0
i is 0
i is 0
i is 0
i is 0
i is 0
i is 0

FUNCTIONS
#function info: def to define the function, can use return to indicate the return from the routine

# code to calculate the average
def average(lst):
"""This is the average function
"""
    sum = 0;
    for n in lst:
       sum += n
    return sum / len(lst)
print average([1,2,3,4,5,100])

REGULAR EXPRESSIONS AND MATCHING
>>> import re
>>> m = re.search('(dog)','dogwood');
>>> if m:
...     print("contains dog")
...     print(m.group(0))
... 
contains dog
dog

>>> m = re.search('(d[aoe]g)','dogwood');
>>> if m:
...     print(m.group(0))
... 
dog

PROBLEMS
1. Write code to test if there is a stopcodon in the following text
AGAGACGAGAGTTACCGACGTAT
2. Check to see if it is in frame?

SEARCH & REPLACE
#Using re.sub and re.subn can replace
#subn() can replace the same as sub() but returns the updated string and count of number
of changes instead of updating the string
'''re.subn(_patter_,_replacement_,_string_,count_num_times_to_perform)
#replace dog with cat

>>> import re
>>> str = "My dog likes to eat dogfood"
>>> print(str)
My dog likes to eat dogfood
>>> str2 = re.sub("dog","cat",str)
>>> print(str2)
My cat likes to eat catfood
>>> str3 = re.sub("cat","lion",str2,1)
>>> print(str3)
My lion likes to eat catfood
>>> str4 = re.sub("cat","lion,str2,2)
  File "<stdin>", line 1
    str4 = re.sub("cat","lion,str2,2)
                                    ^
SyntaxError: EOL while scanning string literal
>>> str4 = re.sub("cat","lion",str2,2)
>>> print(str4)
My lion likes to eat lionfood
>>> str5 = re.sub("lion","cat",str4,2)
>>> print(str5)
My cat likes to eat catfood

MORE ADVANCED REGEX USE
#Regular expressions can be 'compiled' which will make them run faster an simply the use
when you need to repeatedly search a patter. For example, to enumerate the locations of all 
the sites that match

import re
motif = "\s+([Tt]he)\s+"
message = "It was the darkest and stormiest of night. The candles were lit
but the wind kept blowing them out. -OutTheDoor"
the_pattern = re.compile(motif)
m = the_pattern.search(message)
while m:
    print "matched ",m.group(1), " from ", m.start(1), " to ", m.end(1)
    m = the_pattern.search(message,m.end()+1)

Notes on 10/18/17
Python 2: Logic, Loops, iterators by Sawyer Masonjones
2.1: Logic 
Used for decision-making and controlling program flow
Centered around boolean if:then statements 
Use if then statements, if this is true, then do this
2.1 syntax of if/loop statements
Python determines structure of if/else statements lookinf for the ":" and the code that follows needs to be indented
2.1 Logical Expressions
== return true if the values are the same
!= will return true if values are different
> or <
2.2 Loops used to repeat actions
for loops iterate over a range of some structure
while loops repeat until some condition is met

>>> for i in range(1,11):
...     print(i)
... 
1
2
3
4
5
6
7
8
9
10

>>> list = [1,2,3,4,5,6]
>>> for i in range(len(list)):
...     print list[i]
... 
1
2
3
4
5
6

>>> for i in range(10,-1,-1): 
...  print(i)
... 
10
9
8
7
6
5
4
3
2
1
0

>>> for i in range(30,-1,-3):
...     print(i)
... 
30
27
24
21
18
15
12
9
6
3
0

can directly iterate over lists 
>>> for item in list:
...     print(item)
... 
1
2
3
4
5
6

>>> while i < 100:
...     i += 1
...     print(i)
... 
1
2
3
4
5
6
7
8
9
10
11
12
13
14
15
16
17
18
19
20
21
22
23
24
25
26
27
28
29
30
31
32
33
34
35
36
37
38
39
40
41
42
43
44
45
46
47
48
49
50
51
52
53
54
55
56
57
58
59
60
61
62
63
64
65
66
67
68
69
70
71
72
73
74
75
76
77
78
79
80
81
82
83
84
85
86
87
88
89
90
91
92
93
94
95
96
97
98
99
100

>>> for i in list:
...     print(i)
...     if i == 4:
...             break
... 
1
2
3
4

>>> for i in list:
...     if i % 2 == 0:
...             print("I am even")
...             continue
...     print("I am odd")
... 
I am odd
I am even
I am odd
I am even
I am odd
I am even

2.4 Iterations over lists with for loop
>>> iterator = iter(list)
>>> next(iterator)
1
>>> next(iterator)
2
>>> next(iterator)
3
>>> next(iterator)
4
>>> next(iterator)
5
>>> next(iterator)
6
>>> iterator = iter(list)
>>> for i in iterator:
...     print(i)
... 
1
2
3
4
5
6

>>> iterator = iter(list)
>>> while True:
...     try:
...             next(iterator)
...     except StopIteration:
...             break
... 
1
2
3
4
5
6

for loops iterate over a specific range

for i in sequence:
...     if i == 'G':
...             print(i)
...     if i == 'C':
...             print(i)

>>> count_gc = 0
>>> for i in sequence:
...     if i == 'G' or i == 'C':
...             count_gc += 1
... 
>>> gcperc = count_gc/(len(sequence)) * 100
>>> gcperc
50.0
